--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import AffirmationComponent from '../components/AffirmationComponent.jsx';
 	<main>
 		<h1>Welcome to <span class="text-gradient">Your Affirmation App</span></h1>
 			<div class="instructions">
-				<AffirmationComponent client:load messages={data} />
+				<AffirmationComponent client:load affirmations={data} />
 			</div>
 	</main>
 </Layout>
