--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,9 @@ import AffirmationComponent from '../components/AffirmationComponent.jsx';
 	<main>
 
 		<h1>Welcome to <span class="text-gradient">Your Affirmation App</span></h1>
-			<div class="text">
+			<section class="text">
 				<AffirmationComponent client:load affirmations={data} />
-			</div>
+			</section>
 	</main>
 </Layout>
 
