--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-
-const response = await fetch('https://e51pzppdu1.execute-api.us-east-1.amazonaws.com/items');
-const data = await response.json();
-
 import AffirmationComponent from '../components/AffirmationComponent.jsx';
-
 ---
 
 <Layout title="My Affirmations">
@@ -13,7 +8,7 @@ import AffirmationComponent from '../components/AffirmationComponent.jsx';
 
 		<h1>Welcome to <span class="text-gradient">Your Affirmation App</span></h1>
 			<section class="text">
-				<AffirmationComponent client:load affirmations={data} />
+				<AffirmationComponent client:load/>
 			</section>
 	</main>
 </Layout>
@@ -48,3 +43,4 @@ import AffirmationComponent from '../components/AffirmationComponent.jsx';
 	}
 
 </style>
+
